null/del filter works, but json wont be created

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,6 +37,7 @@ nav a{
 
 .divcontent{
   display: flex;
+  flex-direction: column;
   vertical-align: middle;
   text-align: center;
   margin: 10px;
