--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,58 +1,64 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 nav {
-  background-color: #bbdffc;
-  padding:  16px 32px;
+    background-color: #bbdffc;
+    padding: 16px 32px;
 }
 
-nav a{
-  margin-right: 16px;
+nav a {
+    margin-right: 16px;
 }
 
-.testclass{
-  background-color: darkred;
+.testclass {
+    background-color: darkred;
 }
 
-.mainstyle{
-  padding: 10px 0;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-content: space-around;
+.custInputMaxWidth {
+    max-width: 200px;
 }
 
-.divcontent{
-  display: flex;
-  flex-direction: column;
-  vertical-align: middle;
-  justify-content: center;
+.mainstyle {
+    padding: 10px 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: space-around;
+}
+
+.divcontent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-  margin: 10px;
+    margin: 10px;
+    /*padding: 20px;*/
 
 }
-
-.dropzonestyle{
-  display: flex;
-  background-color: #beb6b6;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
+.divcontent label{
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.divcontent input{
+    flex-grow: 1;
 }
 
-
-/*nav a.active{*/
-/*  text-decoration: none;*/
-/*  font-weight: bold;*/
-/*}*/
+.dropzonestyle {
+    display: flex;
+    background-color: #beb6b6;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    padding: 20px;
+}
