--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,12 +25,10 @@ nav a {
     background-color: darkred;
 }
 
-.custInputMaxWidth {
-    max-width: 200px;
-}
+
 
 .mainstyle {
-    padding: 10px 0;
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -42,17 +40,29 @@ nav a {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 10px;
-    /*padding: 20px;*/
+    padding: 10px;
 
 }
-.divcontent label{
-    white-space: nowrap;
-    flex-shrink: 0;
+
+.custInputWidth {
+    width: 200px;
 }
-.divcontent input{
+
+.form-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.form-container label {
+    flex-basis: 150px;
+    margin-right: 10px;
+}
+
+.form-container input {
     flex-grow: 1;
 }
+
 
 .dropzonestyle {
     display: flex;
