--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,7 +37,7 @@ code {
 
 .divcontent {
     display: flex;
-
+    width: 60%;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -52,6 +52,7 @@ code {
 }
 .btnPosition{
     display: flex;
+    justify-content: flex-end;
 }
 
 .custInputWidth {
@@ -80,5 +81,6 @@ code {
     align-items: center;
     justify-content: center;
     height: 100px;
+    width: 100%;
     padding: 20px;
 }
